shadcn fix gap of toggle

--- a/packages/survey-core/src/themes/adapters/bootstrap.scss
+++ b/packages/survey-core/src/themes/adapters/bootstrap.scss
@@ -308,6 +308,8 @@
   --sd-boolean-switch-button-spacing: 0px;
   --sd-boolean-switch-button-width: 2em;
   --sd-boolean-switch-button-heigth: 1em;
+
+  gap: 0.5rem;
 }
 
 .sd-boolean-switch__button {
